# print-ease

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
data/: at.printease.PrintEase.desktop
debian/: changelog  control  copyright  print-ease.1.md  print-ease.lintian-overrides  rules
docs/: ROADMAP.md  cups3-audit.md  v0.2.0-flatbed-multipage.md
src/print_ease/: __init__.py  __main__.py  _i18n.py  _log.py  avahi_client.py  constants.py  cups_client.py  media_names.py  printer_model.py  scanner_client.py  settings.py
src/print_ease/gui/: add_printer_dialog.py  printer_detail.py  printer_row.py  scanner_panel.py  window.py
src/print_ease/locale/: LINGUAS  print_ease.pot
src/print_ease/locale/ar/LC_MESSAGES/: print_ease.po
src/print_ease/locale/bg/LC_MESSAGES/: print_ease.po
src/print_ease/locale/cs/LC_MESSAGES/: print_ease.po
src/print_ease/locale/da/LC_MESSAGES/: print_ease.po
src/print_ease/locale/de/LC_MESSAGES/: print_ease.po
src/print_ease/locale/el/LC_MESSAGES/: print_ease.po
src/print_ease/locale/en/LC_MESSAGES/: print_ease.po
src/print_ease/locale/es/LC_MESSAGES/: print_ease.po
src/print_ease/locale/fa/LC_MESSAGES/: print_ease.po
src/print_ease/locale/fi/LC_MESSAGES/: print_ease.po
src/print_ease/locale/fr/LC_MESSAGES/: print_ease.po
src/print_ease/locale/he/LC_MESSAGES/: print_ease.po
src/print_ease/locale/hi/LC_MESSAGES/: print_ease.po
src/print_ease/locale/hr/LC_MESSAGES/: print_ease.po
src/print_ease/locale/hu/LC_MESSAGES/: print_ease.po
src/print_ease/locale/id/LC_MESSAGES/: print_ease.po
(+17 files in other folders)
